Fix #114452: Regression with SSL on recent Linux systems

Using the standard OpenSSL directory [0] means Blender's OpenSSL
will inspect that that directory for SSL configuration
(not only certificates).

This causes problems when the systems OpenSSL isn't compatible with
Blender's, where the OpenSSL context can't be created at all because
the configuration fails to load, meaning files can't be downloaded
over HTTPS.

Resolve by pointing CTLOG_FILE & OPENSSL_CONF to /dev/null.

[0]: 60a8ae7830acd09c3d8e9ab52630d48ecd4d281b